tests/script/negative/enum/unknown_enum.s
@initial
run(T arg) {
  terminate();
}
