tests/script/negative/enum/unknown_enum.out
Error at Line 2, Column 7:
   Reference to undefined enum type:
      T